style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

textarea {
  resize: vertical;
}

body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

body,
textarea,
input {
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
  background-color: white;
}

body,
textarea,
input,
input::placeholder,
textarea::placeholder {
  font-family: "Montserrat", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

input::placeholder,
textarea::placeholder {
  font-size: 0.8rem;
}

.hero {
  background-color: #6a8097;
  background-image: url(./images/bg-1.jpg);
  background-position: center;
  background-size: cover;
  padding-top: 50px;
  padding-bottom: 10px;
}

.container {
  width: 100%;
  max-width: 900px;
  margin: 0 auto;
  flex: 1;
}

.p-mark {
  font-weight: 500;
  color: #ff0040;
}

.flex-col {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.countdown {
  color: white;
  gap: 20px;
  text-align: center;
  margin: 50px 0;
  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.838), 1px 1px 1px black;
}

.countdown > div > div:nth-of-type(1) {
  font-size: 2.1rem;
  font-weight: 700;
}

.email-wrapper {
  width: 100%;
  max-width: 400px;
}

.flex-row {
  display: flex;
}

.heading-1 {
  text-transform: uppercase;
  font-weight: 900;
  font-size: 2.2rem;
  padding: 20px 0 10px;
}

.paragraph-1 {
  font-weight: 500;
  text-shadow: 1px 1px 5px black;
  color: rgb(240, 240, 240);
}

.text-center {
  text-align: center;
}

.subscribe-form {
  width: 100%;
}

.subscribe-form input[type="email"] {
  width: 100%;
  padding: 10px;
  outline: none;
}

.subscribe-form input {
  margin: 10px 0;
}

.text-input-1::placeholder {
  color: white;
  text-shadow: 1px 1px 5px black;
}

.text-input-1:focus {
  background-color: rgba(0, 0, 0, 0.3);
}

.text-input-1 {
  background-color: transparent;
  border: none;
  border-bottom: 1px solid white;
  color: white;
}

.button-input-1 {
  padding: 10px 40px;
  outline: none;
  margin-bottom: 20px;
  background-color: #f11d5a;
  color: white;
  border: none;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.387);
  border-radius: 3px;
}

.button-input-1:hover {
  background-color: #d3194e;
}

input[type="button"] {
  cursor: pointer;
}

.footer {
  position: relative;
  padding: 20px 10px;
  background-color: #03a9f5;
  width: 100%;
}

.footer hr {
  margin: 20px 0;
  width: 100%;
  background-color: rgb(225, 225, 225);
  border: none;
  height: 2px;
}

.main-box {
  margin: 70px auto;
  flex-wrap: wrap;
  display: flex;
  justify-content: center;
  flex: 1;
}

.right-section {
  width: 100%;
  max-width: 430px;
  padding: 15px;
}

.left-section {
  width: 100%;
  max-width: 430px;
  padding: 15px;
}

.left-section > h3,
.right-section > h3 {
  padding-bottom: 30px;
}

.left-section > p,
.right-section > p {
  color: rgb(151, 151, 151);
  margin-bottom: 30px;
  font-weight: 400;
}

.bar {
  position: relative;
  margin: 10px 0;
}

.bar-top {
  display: flex;
  justify-content: space-between;
}

.bar-line {
  margin-top: 10px;
  height: 5px;
  background-color: rgb(0, 166, 255);
  border-radius: 10px;
}

.bar-line::before {
  position: absolute;
  content: "";
  left: 0;
  bottom: 0;
  width: 100%;
  height: 5px;
  background-color: rgba(0, 0, 0, 0.133);
  border-radius: 10px;
}

.form-inputs-padding > input,
.form-inputs-padding > textarea {
  padding: 10px;
  width: 100%;
}

.text-input-2 {
  color: black;
  text-shadow: none;
  border-color: gray;
  outline: none;
}

.text-input-2::placeholder {
  color: rgb(170, 170, 170);
  text-shadow: none;
}

.text-input-2:focus {
  background-color: rgba(195, 195, 195, 0.619);
}

.flex-wrap {
  flex-wrap: wrap;
}

.button-input-2 {
  padding: 15px 20px;
}

.form-button-wrapper {
  display: flex;
  margin-top: 10px;
}

.form-button-wrapper {
  align-self: flex-end;
}

.right-form-top {
  display: flex;
  justify-content: space-between;
  gap: 30px;
}

.message-textarea {
  min-height: 100px;
}

.p-link {
  text-decoration: none;
}

.footer-links {
  list-style-type: none;
  display: flex;
  column-gap: 30px;
  flex-wrap: wrap;
  justify-content: center;
}

.footer-links a {
  color: white;
  transition: all 0.1s ease-in-out;
  display: block;
  font-size: 1.2rem;
  padding: 3px 5px;
}

.footer-links a:hover {
  text-shadow: 0 1px 2px black;
}

.footer-under {
  display: flex;
  flex-direction: column;
  row-gap: 3px;
  color: rgb(210, 210, 210);
  font-weight: 500;
  flex-wrap: wrap;
  row-gap: 5px;
  font-size: 0.8rem;
}

.footer-under img {
  display: block;
  width: 200px;
  align-self: center;
  margin: 20px 0;
}

.footer-under a {
  text-decoration: none;
  color: white;
  font-weight: bold;
}

.go-up-btn {
  top: -50px;
  right: 0;
  position: absolute;
  width: 40px;
  height: 40px;
  background-color: #f11d5a;
  border-radius: 50%;
  color: white;
  font-size: 1rem;
  box-shadow: 0 1px 5px black;
  border: none;
  cursor: pointer;
}

.go-up-btn:hover {
  background-color: red;
}

.footer section {
  position: relative;
}

.scroll-img {
  font-size: 2rem;
  color: white;
  margin: 10px 0;
  text-shadow: 0 1px 5px black;
}

